Spacing of rows in grid example and fixing the code in example block

--- a/source/assets/stylesheets/docs/_base.sass
+++ b/source/assets/stylesheets/docs/_base.sass
@@ -47,6 +47,10 @@ p + .row
     background-color: rgba(0,30,69,.15)
     border: 1px solid rgba(0,30,69,.25)
 
+  .row
+    margin-bottom: 10px
+    overflow: hidden
+
 //
 // INTRO TOPBAR
 //
